--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,29 @@
-
 <div class="container">
-	<div class='row'>
-		<h1>Eat Da Burger</h1>
-	</div>
 	<div class="row">
-		<img src='../assets/img/burger.png' width='200'/>
+		<img src="assets/img/burger.jpg" width="200">
 	</div>
+
+	<div class="row">
+		<h1 class="text-center"> Eat Da Burger! </h1>
+	</div>
+
+	<div class="row">	
+		<div class="form-group text-center">
+			<label for="burger"></label>
+			<textarea class="form-control" rows="5" id="burger"></textarea>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="text-center">
+			<button type="button" class="btn btn-primary" id="submit">Submit</button>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class='text-center'>
+			<p> Enter a burger you want to eat and click the submit button </p>
+		</div>
+	</div>
+
 </div>
