--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,12 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<!--<link rel="stylesheet" href="/assets/css/style.css" type="text/css">-->
-	<title>Eat Da Burger</title>
+	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
+	<link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+	<title>Eat Da Wich</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<!--<script src="/assets/js/burger.js"></script>-->
-</head>
-<body>
+	<script src="/assets/js/burger.js"></script>
+	
+
+	</head>
+	<body>
 	{{{ body }}}
-</body>
-</html>
+	</body>
+	</html>
